examples/invalid_modules/duplicate_module/src/main.argx
module app.main

import app.main

type Ping { content: string }

agent Receiver {
    receives Ping
}

protocol Flow {
    User -> Receiver: tell Ping
}
